--- a/Form.html
+++ b/Form.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Формыt</title>
 </head>
 <body>
+    <p>Здесь будут отображены элементы форм: </p>
+    <p>Форма текстового ввода:</p>
+    <form action="https://www/somesite.som/login.php" method="get">
+        <p>Имя пользователя:
+            <input type="text" name="username" size="15" maxlength="30" />
+        </p>
+
+    </form>
     
 </body>
 </html>
