--- a/Form.html
+++ b/Form.html
@@ -71,7 +71,27 @@
         <button><img src="images/add.gif" alt="" width="10" height="10">Добавить</button>
         <input type="hidden"  value="text pesni" />
     </form>
+    <p>Метки элементов:</p>
+    <label>Возраст: <input type="text" name="agge" ></label>
+    <br>
+    Пол:
+    <input type="radio" name="pol" id="female" checked="checked" value="f"> <label for="female">Женский</label>
+    <input type="radio" name="pol" id="male" value="m"> <label for="male">Мужской</label>
+    
+    <p>Группировка элементов форм:</p>
+    <fieldset > 
+        <Legend>Контактная информация</Legend><br>
+        <label>Email: <br><br>
+        <input type="text" name="email" id=""></label><br><br>
+        <label>Телефон: <br>
+        <input type="text" name="phone" id=""></label><br><br>
+        <label>
+            Факс: <br>
+            <input type="text" name="fax" id=""><br><br>
+        </label>
 
+    </fieldset>
+    
 
-</body>
+  </body>
 </html>
