--- a/Form.html
+++ b/Form.html
@@ -89,9 +89,20 @@
             Факс: <br>
             <input type="text" name="fax" id=""><br><br>
         </label>
-
     </fieldset>
-    
-
+    <p>Валидация форм</p>
+    <form action="http://www.somesite.som/login/" method="POST">
+        <label for="username">Имя пользователя</label><br><br>
+        <input type="text" name="username" required="required"> <br><br>
+        <label for="password">Пароль</label><br><br>
+        <input type="password" name="parol" required="required" id=""><br><br>
+        <input type="submit" value="Отправить"><br>
+    </form>
+    <p>ВВОД ДАТЫ</p>
+    <form action="http://www.somesite.som/bookings/" method="post">
+        <label for="depart">Дата вылета</label>
+        <input type="date" name="depart" id="">
+        <input type="submit" value="Отправить">
+    </form>
   </body>
 </html>
