--- a/Form.html
+++ b/Form.html
@@ -103,6 +103,12 @@
         <label for="depart">Дата вылета</label>
         <input type="date" name="depart" id="">
         <input type="submit" value="Отправить">
-    </form>
+    </form> <br>
+    <p>ФОРМА ВВОДА Email</p>
+    <form action="https://somesite.som/profile.php" method="POST"></form>
+    <p>Введите адрес электроной почты:</p>
+        <input type="email" name="email">
+        <input type="submit" value="Отправить">
+
   </body>
 </html>
