add search form

--- a/Form.html
+++ b/Form.html
@@ -128,7 +128,18 @@
         <p>Введите адрес сайта:</p>
         <input type="text" name="siteaddress" id="">
         <input type="submit" value="Отправить">
-    </form>
+    </form><br><br>
+
+    <p>ФОРМА поискового запроса</p>
+    <form action="https://www.somesite.som/search.php" method="get">
+        <p>Поиск</p>
+        <input type="search" name="search" placeholder="iPhone">
+        <input type="submit" value="Искать">
+    </form><br><br>
+
+    
+
+
 
 
 
