add Eltctrik Universse

--- a/continue.html
+++ b/continue.html
@@ -4,15 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>пПродолжаем практиковаться</title>
+    <title>Продолжаем практиковаться</title>
 </head>
 <body>
-    <h1>ХИРОШИ СУГИМОТО</h1>
-    <p>Ниже приведены даты проведения выставки <br> ИСТОКИ ИСКУССТВА</p>
-    <ul>
-        <li>Наука 10.01.01 - 20.01.01</li>
-        <li>Архитектура 21.01.01 - 301.01.01</li>
-        <li>Религия 01.02.01 - 10.02.01</li>
-    </ul>
+    <h1>Очень вкусный Html</h1>
+    <div>
+            <h2>ХИРОШИ СУГИМОТО</h2>
+        <p>Ниже приведены даты проведения выставки <br> ИСТОКИ ИСКУССТВА</p>
+        <ul>
+            <li>Наука 10.01.01 - 20.01.01</li>
+            <li>Архитектура 21.01.01 - 301.01.01</li>
+            <li>Религия 01.02.01 - 10.02.01</li>
+        </ul>
+    </div>
+    <div>
+        <h2>группировка текста и элементов в блок</h2>
+        <div id=header>
+            <img src="images/logo.gif" alt="elektric universe">
+            <ul>
+                <li><a href="index.html">Главная</a></li>
+                <li><a href="biografi.html">Биография</a></li>
+                <li><a href="works.html"></a>Дискография</li>
+            </ul>
+        </div>    
+    </div>    
 </body>
 </html>
