--- a/continue.html
+++ b/continue.html
@@ -26,7 +26,10 @@
                 <li><a href="biografi.html">Биография</a></li>
                 <li><a href="works.html"></a>Дискография</li>
             </ul>
-        </div>    
+        </div>   
+        <div>
+            <p>Electric Universe - проект в жанре <span class="psy">психоделистический транс</span>основанный в Германии в 1992 году</p>
+        </div> 
     </div>    
 </body>
 </html>
