change work in Electrik Universe

--- a/continue.html
+++ b/continue.html
@@ -24,12 +24,15 @@
             <ul>
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="biografi.html">Биография</a></li>
-                <li><a href="works.html"></a>Дискография</li>
+                <li><a href="works.html">Дискография</a></li>
             </ul>
         </div>   
         <div>
             <p>Electric Universe - проект в жанре <span class="psy">психоделистический транс</span>основанный в Германии в 1992 году</p>
         </div> 
+        <div>
+
+        </div>
     </div>    
 </body>
 </html>
