--- a/continue.html
+++ b/continue.html
@@ -28,10 +28,12 @@
             </ul>
         </div>   
         <div>
-            <p>Electric Universe - проект в жанре <span class="psy">психоделистический транс</span>основанный в Германии в 1992 году</p>
+            <p >Electric Universe - проект в жанре <span class="psy">психоделистический транс</span>основанный в Германии в 1992 году</p>
         </div> 
         <div>
-
+            <h2>Плавающий фрейм</h2>
+            <iframe src="countinue.html" frameborder="0" width="550" height="240"></iframe>
+            
         </div>
     </div>    
 </body>
