eleven add thirteen edit

--- a/CSSstartCOLORS.html
+++ b/CSSstartCOLORS.html
@@ -55,10 +55,13 @@
         p.ten {
             background-color: rgb(84, 182, 237);
         }
+        p.eleven{
+            background-color: rgb(48, 170, 233);
+        }
         p.twelve {
             background-color: rgb(0, 160, 230);
         }
-        p.therteen {
+        p.theirteen {
             background-color: rgb(0, 149, 226);
         }
         p.fourteen {
