--- a/CSSstartCOLORS.html
+++ b/CSSstartCOLORS.html
@@ -61,7 +61,7 @@
         p.twelve {
             background-color: rgb(0, 160, 230);
         }
-        p.theirteen {
+        p.thirteen {
             background-color: rgb(0, 149, 226);
         }
         p.fourteen {
